spring & quartz configuration

--- a/01_Email_Scheduler/src/main/resources/application.properties
+++ b/01_Email_Scheduler/src/main/resources/application.properties
@@ -1,5 +1,33 @@
-#Database Config
+## Application Name && Server Port
+server.port=8088
+spring.application.name=SchedulerDemo
+
+## Database Config
 spring.datasource.url=jdbc:postgresql://localhost:5432/quartzdb
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
+
+## Quartz Config
+spring.quartz.job-store-type=jdbc
+spring.quartz.jdbc.initialize-schema=always
+spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
+spring.quartz.properties.org.quartz.jobStore.class=org.springframework.scheduling.quartz.LocalDataSourceJobStore
+spring.quartz.properties.org.quartz.jobStore.dataSource=spring.datasource
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.jobStore.tablePrefix=qrtz_
+spring.quartz.properties.org.quartz.jobStore.misfireThreshold=60000
+spring.quartz.properties.org.quartz.scheduler.instanceName=SpringBootQuartzApp
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+spring.quartz.properties.org.quartz.plugin.shutdownHook.class=org.quartz.plugins.management.ShutdownHookPlugin
+spring.quartz.properties.org.quartz.plugin.shutdownHook.cleanShutdown=true
+
+## Mail Config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=my_email@gmail.com
+spring.mail.password=my_password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
