--- a/02_Quartz_Scheduler_Demo/src/main/resources/application.properties
+++ b/02_Quartz_Scheduler_Demo/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+## Application Name && Server Port
+server.port=8088
+spring.application.name=SchedulerDemo
 
+## Database Config
+spring.datasource.url=jdbc:postgresql://localhost:5432/quartzdb
+spring.datasource.username=postgres
+#spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
